k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: efact
  labels:
    name: efact
    environment: production
